<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainBody"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#2196F3"
        android:orientation="vertical"
        android:weightSum="9
"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/verts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="match_parent"
                    android:layout_height="114dp"
                    android:padding="10dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/tipcalc" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/author"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/app_author" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/billName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:paddingStart="40dp"
                        android:text="@string/txtBillName"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/billQuery"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/bill_hint"
                        android:inputType="numberDecimal"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tipName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:paddingStart="40dp"
                        android:text="@string/txtTipName"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/tipQuery"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:autoText="false"
                        android:ems="10"
                        android:gravity="start|fill"
                        android:hint="@string/tip_hint"
                        android:inputType="numberDecimal"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/peopleName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:paddingStart="40dp"
                        android:text="@string/txtPeopleName"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/people_amount"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:autoText="false"
                        android:ems="10"
                        android:gravity="start|fill"
                        android:hint="@string/people_hint"
                        android:inputType="number"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:padding="20dp"
                    android:weightSum="2">


                    <Button
                        android:id="@+id/calc_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/btn_rounded"
                        android:text="@string/calc"
                        android:textAllCaps="false"
                        android:textColor="#4465B3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tipAnsName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:paddingStart="40dp"
                        android:text="@string/lblTipName"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tipOutput"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="start|fill"
                        android:inputType="number"
                        android:textColor="#FFEB3B"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/totAnsName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:paddingStart="40dp"
                        android:text="@string/lblTotalName"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/totOutput"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="start|fill"
                        android:textColor="#FFEB3B"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/perAnsName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:paddingStart="40dp"
                        android:text="@string/lblPeopleName"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/amountOutput"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="start|fill"
                        android:textColor="#FFEB3B"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>